--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^4.5.0",
     "mongoose": "^8.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-schedule": "^2.1.1",
     "nodemon": "^3.0.2"
   },
   "devDependencies": {
